--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,23 @@ h1 {
     margin: 1rem;
     text-align: center;
 }
-
+#view {
+    position: absolute;
+    top: 1rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: .5rem;
+    font-family: "Manrope", serif;
+    font-optical-sizing: auto;
+    font-weight: 200;
+    font-style: normal;
+    font-size: .75rem;
+}
+#views > span {
+    align-self: center;
+}
 #setTip {
     text-align: center;
 }
@@ -75,13 +91,13 @@ h1 {
     'GRAD' 0,
     'opsz' 24
 }
-.material-symbols-outlined.info {
+.material-symbols-outlined#viewToggle {
     font-variation-settings:
     'FILL' 0,
     'wght' 200,
     'GRAD' 0,
     'opsz' 24;
-    font-size: 1rem;
+    font-size: 1.5rem;
 }
 .star {
     color: #FA9500;
@@ -134,4 +150,7 @@ input {
 #toggles > .labels {
     font-size: 1rem;
     place-self: center start;
+}
+.toggle {
+    cursor: pointer;
 }
